[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/UI/MainMenuUI/Submenus/ConfigMenu/ConfigMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Menu/Menu_Backdrop_07.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/ChunkyPixelsNormal.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -104.0
margin_right = 152.0
margin_bottom = 104.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 44.0
margin_top = 74.0
margin_right = 290.0
margin_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModifyControls" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 21.0
margin_right = 246.0
margin_bottom = 35.0
focus_neighbour_top = NodePath("../QuitGame")
mouse_filter = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0980392, 0.85098, 0.886275, 1 )
text = "View Controls"

[node name="ChangeSoundVolume" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 39.0
margin_right = 246.0
margin_bottom = 53.0
mouse_filter = 2
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0980392, 0.85098, 0.886275, 1 )
text = "Change Music / SFX Volume"

[node name="QuitGame" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 57.0
margin_right = 246.0
margin_bottom = 71.0
focus_neighbour_bottom = NodePath("../ModifyControls")
mouse_filter = 2
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.898039, 0.247059, 0.247059, 1 )
custom_colors/font_color_pressed = Color( 0.898039, 0.247059, 0.247059, 1 )
text = "Quit Game"
